Configure PostgreSQL with migrations for Render

--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "prisma generate"
+    "build": "prisma generate",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
     "seed": "node prisma/seed.js",
     "postinstall": "prisma generate"
   },
