--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "prisma generate",
+    "build": "prisma generate && prisma db push",
     "dev": "nodemon server.js",
     "seed": "node prisma/seed.js",
     "postinstall": "prisma generate"
