--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "prisma generate && prisma db push",
+    "build": "prisma generate && prisma db push --accept-data-loss",
     "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
+    "prisma:push": "prisma db push",
     "seed": "node prisma/seed.js",
     "postinstall": "prisma generate"
   },
@@ -17,9 +21,20 @@
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
   },
-  "keywords": ["運輸", "計算器", "物流", "小跑豬"],
+  "keywords": [
+    "運輸",
+    "計算器",
+    "物流",
+    "小跑豬",
+    "logistics",
+    "calculator"
+  ],
   "author": "RD107924",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RD107924/RUNPIGGY-V2.git"
+  },
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
