--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.22.0"
   }
