--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.22.0"
   }
